force-app/main/default/objects/PriceBooks__c/PriceBooks__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>PriceBooks</label>
</CustomObject>