force-app/main/default/objects/PriceBooks__c/fields/Base_Charge__c.field-meta.xml
<CustomField>
    <fullName>Base_Charge__c</fullName>
    <label>Base Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>