force-app/main/default/objects/PriceBooks__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>