force-app/main/default/objects/PriceBooks__c/fields/Fast_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Fast_Delivery__c</fullName>
    <label>Fast Delivery</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>